--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,33 +36,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#todo: incorporate different collection types rather than a catch all publications, requires other changes to template\n",
     "publist = {\n",
     "    \"proceeding\": {\n",
-    "        \"file\" : \"proceedings.bib\",\n",
+    "        \"file\" : \"self.bib\",\n",
     "        \"venuekey\": \"booktitle\",\n",
     "        \"venue-pretext\": \"In the proceedings of \",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
     "                        \"permalink\":\"/publication/\"}\n",
     "        \n",
     "    },\n",
-    "    \"journal\":{\n",
-    "        \"file\": \"pubs.bib\",\n",
-    "        \"venuekey\" : \"journal\",\n",
-    "        \"venue-pretext\" : \"\",\n",
-    "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
-    "    } \n",
+    "#     \"journal\":{\n",
+    "#         \"file\": \"self.bib\",\n",
+    "#         \"venuekey\" : \"journal\",\n",
+    "#         \"venue-pretext\" : \"\",\n",
+    "#         \"collection\" : {\"name\":\"publications\",\n",
+    "#                         \"permalink\":\"/publication/\"}\n",
+    "#     } \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BibliographyData(entries=OrderedCaseInsensitiveDict([('HuangLiLiuXu2016', Entry('article', fields=[('file', ':C$\\\\backslash$:/Users/DeLiu/Documents/Mendeley Desktop/Huang et al. - Unknown - Auctioning IT Service Contracts(4).pdf:pdf'), ('journal', 'Revising for Resubmission to Management Science'), ('title', '{Auctioning IT Service Contracts}')], persons=OrderedCaseInsensitiveDict([('author', [Person('Huang, He'), Person('Li, Zhipeng'), Person('Liu, De'), Person('Xu, Hongyan')])]))), ('Rui2011a', Entry('inproceedings', fields=[('address', 'Shanghai, China'), ('booktitle', 'Workshop on Information System Economics'), ('title', '{Optimal Allocation for Display Advertising}'), ('year', '2011')], persons=OrderedCaseInsensitiveDict([('author', [Person('Rui, Huaxia'), Person('Liu, De'), Person('Whinston, Andrew B.')])]))), ('CaiChanLiu2017wise', Entry('inproceedings', fields=[('address', 'Seoul, South Korea'), ('booktitle', 'Workshop on Economics of Information Systems (WISE)'), ('file', ':C$\\\\backslash$:/Users/DeLiu/Documents/Mendeley Desktop//Cai, Chan, Liu - Unknown - Better to Give Than to Receive Impacts of Donation-Based Contribution Schemes on Crowdfunding Outcomes.pdf:pdf'), ('title', '{Better to Give Than to Receive: Impacts of Donation-Based Contribution Schemes on Crowdfunding Outcomes}'), ('year', '2017')], persons=OrderedCaseInsensitiveDict([('author', [Person('Cai, Zhigang'), Person('Chan, Jason'), Person('Liu, De')])]))), ('Li2019', Entry('inproceedings', fields=[('address', 'Munich, Germany'), ('booktitle', 'ICIS 2019 Proceedings'), ('title', '{Re-engaging underachievers: toward a participation internalization approach to gamified online learning design}'), ('year', '2019')], persons=OrderedCaseInsensitiveDict([('author', [Person('Li, Tao'), Person('Liu, De'), Person('Xu, Xin')])]))), ('Ruia', Entry('article', fields=[('file', ':C$\\\\backslash$:/Users/DeLiu/Documents/Mendeley Desktop//Rui, Liu, Whinston - 2017 - Allocation and Pricing of Substitutable Goods Theory and Algorithm.pdf:pdf'), ('journal', 'Production and Operations Management'), ('number', '5'), ('pages', '767--783'), ('title', '{Allocation and Pricing of Substitutable Goods: Theory and Algorithm}'), ('volume', '26'), ('year', '2017')], persons=OrderedCaseInsensitiveDict([('author', [Person('Rui, Huaxia'), Person('Liu, De'), Person('Whinston, Andrew')])])))]), preamble=[])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bibdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +334,44 @@
     "            print(f'WARNING Missing Expected Field {e} from entry {bib_id}: \\\"', b[\"title\"][:30],\"...\"*(len(b['title'])>30),\"\\\"\")\n",
     "            continue"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = bibtex.Parser()\n",
+    "bibdata = parser.parse_file(\"self.bib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING Missing Expected Field 'year' from entry HuangLiLiuXu2016: \" {Auctioning IT Service Contrac ... \"\n",
+      "SUCESSFULLY PARSED Rui2011a: \" {Optimal Allocation for Display Advertising}  \"\n",
+      "SUCESSFULLY PARSED CaiChanLiu2017wise: \" {Better to Give Than to Receive: Impacts of Donation-Based C ... \"\n",
+      "SUCESSFULLY PARSED Li2019: \" {Re-engaging underachievers: toward a participation internal ... \"\n",
+      "WARNING Missing Expected Field 'booktitle' from entry Ruia: \" {Allocation and Pricing of Sub ... \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_set(bibdata, [])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
